finish file wirter/reader module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(glog REQUIRED)
 include_directories(./include)
 set(link_lib glog pthread gtest)
-aux_source_directory(./include/cache LIB_CACHE)
+aux_source_directory(./src/db LIB_DB)
+aux_source_directory(./src/memory LIB_MEMORY)
+aux_source_directory(./src/file LIB_FILE)
 
-add_executable(small_kv main.cpp ${LIB_CACHE})
+add_executable(small_kv main.cpp ${LIB_DB} ${LIB_MEMORY} ${LIB_FILE})
 target_include_directories(${PROJECT_NAME} PUBLIC ${GTEST_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${link_lib})
 enable_testing()
